# keenchic-API-Gateway

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  main.py  pyproject.toml  serve.py
keenchic/: __init__.py
keenchic/api/: deps.py  router.py
keenchic/core/: config.py  inspection_manager.py  logging.py
keenchic/inspections/: base.py  registry.py  result_codes.py
keenchic/inspections/adapters/ocr/: datecode_num.py  holo_num.py  pill_count.py  temper_num.py
keenchic/schemas/: response.py
keenchic/services/: permit_lookup.py
openspec/: config.yaml
openspec/changes/archive/2026-02-28-scaffold-gateway-structure/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-28-scaffold-gateway-structure/specs/ocr-datecode-num/: spec.md
openspec/changes/archive/2026-02-28-scaffold-gateway-structure/specs/permit-lookup/: spec.md
openspec/changes/archive/2026-03-01-structured-logging/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-01-structured-logging/specs/request-logging/: spec.md
openspec/specs/dynamic-model-cache/: spec.md
openspec/specs/inspection-adapter-interface/: spec.md
openspec/specs/inspection-routing/: spec.md
openspec/specs/ocr-datecode-num/: spec.md
openspec/specs/request-logging/: spec.md
