[project]
name = "keenchic-api-gateway"
version = "0.1.0"
description = "API gateway for routing image inspection requests to deep learning inference modules"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "structlog>=24.0.0",
    "openvino==2025.3.0",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.10.8",
]

[project.scripts]
keenchic-serve = "serve:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["keenchic"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
